modularize ui.js

--- a/ui/index.html
+++ b/ui/index.html
@@ -49,8 +49,8 @@
         }
     }
     </script>
-    <script src="scripts/ui.js" defer></script>
-    <!-- <script src="scripts/piece.js" type="module"></script>
+    <!--<script src="scripts/ui.js" defer></script>
+    <script src="scripts/piece.js" type="module"></script>
     <script src="scripts/parse.js" type="module"></script>
     <script src="scripts/canvas.js" type="module"></script>
     <script src="scripts/draw.js" type="module"></script>
