Connect to new UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -128,7 +128,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
         </div>
         <div class="popup-title">Information</div>
         <div class="popup-content">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            <p><b>&copy; <a href="https://github.com/ftxi/5dchess_engine">ftxi</a></b> 2024-2026. </p>
+            <p><b>Github Repository:</b> <a href="https://github.com/ftxi/5dchess_engine">https://github.com/ftxi/5dchess_engine</a></p>
+            <p>This software is open source and distributed under the BSD 2-Clause License.</p>
+            <h4>Resources</h4>
+            <p>Icons: <a href="https://remixicon.com/license">RemixIcon</a></p>
+            <h4>Disclaimer</h4>
+            <p>This Project was made without reference to source or decompiled code from the software "5d Chess With Multiverse Time Travel" developed by LLC. Thunkspace. All code, assets, libraries and other files in this project are either open source or made by myself.</p>
         </div>
     </div>
 
@@ -157,7 +163,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     </div>
 </div>
 
-<div class="debug-window">
+<div class="debug-window" style="display:none">
     <p id="camera">camera</p>
     <p id="status">status</p>
 </div>
