more arrows to draw

--- a/ui/index.html
+++ b/ui/index.html
@@ -158,7 +158,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <div class="popup-window" id="popupSettings">
         <div class="popup-title">Settings</div>
         <div class="popup-content">
-            Settings panel coming soon...
+            <label style="display:flex;align-items:center;gap:8px;">
+                <input type="checkbox" id="allowSubmitWithChecks">
+                <span>Allow submit with checks</span>
+            </label>
+            <p style="margin-top:8px;font-size:0.9em;color:#666;">When checked, submitting legal moves will be allowed even if the current board has checks.</p>
         </div>
     </div>
 </div>
