--- a/ui/index.html
+++ b/ui/index.html
@@ -165,7 +165,7 @@
             <textarea class="popup-textarea popup-textarea-flex" id="importTextarea" placeholder="Paste your data here or drag and drop a file..."></textarea>
             <div class="popup-button-group">
                 <button class="popup-button" id="loadFromFileButton">Load from File</button>
-                <button class="popup-button" id="loadButton">Load from Text</button>
+                <button class="popup-button" id="loadButton">Load</button>
             </div>
         </div>
     </div>
@@ -174,9 +174,17 @@
         <div class="popup-title">Export Data</div>
         <div class="popup-content popup-content-flex">
             <textarea class="popup-textarea popup-textarea-flex" id="exportTextarea" readonly></textarea>
+            <div class="filename-inputs">
+                <div class="input-group" style="width: 60%;">
+                    <input type="text" id="exportFilename" placeholder="filename">
+                </div>
+                <div class="input-group" style="width: 20%;">
+                    <input type="text" id="exportExtension" placeholder=".extension">
+                </div>
+                <button class="popup-button" id="saveButton">Save as File</button>
+            </div>
             <div class="popup-button-group">
                 <button class="popup-button" id="copyButton">Copy to Clipboard</button>
-                <button class="popup-button" id="saveButton">Save as File</button>
             </div>
         </div>
     </div>
